--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "ademoverflow-template",
+	"name": "event-radar-ai",
 	"version": "0.0.0",
 	"private": true,
 	"packageManager": "pnpm@10.23.0",
