--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 dependencies = []
-name = "ademoverflow-template"
+name = "event-radar-ai"
 readme = "README.md"
 requires-python = ">=3.13"
 version = "0.0.0"
