--- a/core/pyproject.toml
+++ b/core/pyproject.toml
@@ -1,8 +1,11 @@
 [project]
 dependencies = [
     "alembic>=1.17.2",
+    "apscheduler>=3.11.0",
     "asyncpg>=0.31.0",
     "fastapi>=0.115.14",
+    "httpx>=0.28.1",
+    "openai>=1.82.0",
     "orjson>=3.11.5",
     "passlib>=1.7.4",
     "psutil>=7.2.0",
