feat: implement LinkedIn scraping service and Phantombuster integration

--- a/env.example
+++ b/env.example
@@ -10,3 +10,9 @@ CORE_JWT_TYPE=Bearer
 CORE_JWT_EXPIRATION_TIMEDELTA_MINUTES=1440
 WEBAPP_URL=http://192.168.x.x:9998
 COOKIE_DOMAIN=192.168.x.x
+PHANTOMBUSTER_API_KEY=
+PHANTOMBUSTER_PROFILE_POSTS_AGENT_ID=
+LINKEDIN_SESSION_COOKIE=
+LINKEDIN_USER_AGENT=
+DEFAULT_CRAWL_FREQUENCY_HOURS=24
+MAX_POSTS_PER_CRAWL=20
