--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,12 @@ requires-python = ">=3.13"
 version = "1.0.1"
 
 [dependency-groups]
-dev = ["jupyter>=1.1.1", "mypy>=1.17.1", "poethepoet>=0.37.0", "ruff>=0.12.10"]
+dev = [
+    "jupyter>=1.1.1",
+    "mypy>=1.17.1",
+    "poethepoet>=0.37.0",
+    "ruff>=0.12.10",
+]
 
 [tool.ruff.lint]
 ignore = [
