--- a/compose.yaml
+++ b/compose.yaml
@@ -50,6 +50,7 @@ services:
       - /app/node_modules
     environment:
       NODE_ENV: development
+      VITE_CORE_URL: ${VITE_CORE_URL}
     depends_on:
       - core
     restart: unless-stopped
