--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ ignore = [
     "G004",    # Allow f-string in logging
     "ISC001",  # Ignore implicit string concatenation
     "PLR0911", # Ignore too many return statements
+    "PLR0913", # Ignore too many arguments (common in FastAPI endpoints)
     "S101",    # Ignore use of assert statements
     "S104",    # Ignore possible binding to all interfaces
 ]
@@ -54,6 +55,10 @@ mypy_path = "stubs"
 plugins = ["pydantic.mypy"]
 pretty = true
 show_column_numbers = true
+
+[[tool.mypy.overrides]]
+module = "core.routers.*"
+disable_error_code = ["arg-type", "attr-defined", "call-overload", "union-attr"]
 
 [tool.uv.workspace]
 members = ["core"]
