--- a/webapp/package.json
+++ b/webapp/package.json
@@ -33,6 +33,7 @@
     "lucide-react": "^0.545.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.0.6",
     "zod": "^4.1.11"
